--- a/themes/hugo-elate-theme/layouts/partials/work.html
+++ b/themes/hugo-elate-theme/layouts/partials/work.html
@@ -13,14 +13,14 @@
 			<div class="row row-bottom-padded-sm">
 			{{ range .Site.Params.work.row }}
 				<div class="col-md-4 col-sm-6 col-xxs-12">
-					<a href="images/{{ .img }}" class="fh5co-project-item image-popup to-animate">
+					<a href="{{ .url }}" class="fh5co-project-item to-animate">
 						<img src="images/{{ .img }}" alt="{{ .alt }}" class="img-responsive">
 						<div class="fh5co-text">
 						<h2>{{ .title }}</h2>
 						<span>{{ .subtitle }}</span>
 						</div>
 					</a>
-				</div>				
+				</div>
 
 				<div class="clearfix visible-sm-block"></div>
 			{{ end }}
