--- a/themes/hugo-elate-theme/layouts/partials/intro.html
+++ b/themes/hugo-elate-theme/layouts/partials/intro.html
@@ -14,6 +14,20 @@
 				</div>
 				{{ end }}
 			</div>
+
+			{{ if .Site.Params.intro.news.enable }}
+			<div class="row watch-video text-center to-animate">
+				<div class="col-md-12 section-heading text-center">
+					<h2 class="center-border to-animate">{{ with .Site.Params.intro.news.title }}{{ . | markdownify }}{{ end }}</h2>
+					<div class="row">
+						<div class="col-md-8 col-md-offset-2 subtext to-animate">
+							<h3>{{ with .Site.Params.intro.news.description }}{{ . | markdownify }}{{ end }}</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+			{{ end }}
+
 			{{ if .Site.Params.intro.video.enable }}
 			<div class="row watch-video text-center to-animate">
 				<!-- <span>{{ with .Site.Params.intro.video }}{{ . }}{{ end }}</span> -->
