--- a/themes/hugo-elate-theme/layouts/partials/nav.html
+++ b/themes/hugo-elate-theme/layouts/partials/nav.html
@@ -23,11 +23,11 @@
                     {{ if .Site.Params.about.enable }}
                     <li><a href="#" data-nav-section="about"><span>{{ with .Site.Params.navigation.about }}{{ . | markdownify }}{{ end }}</span></a></li>
                     {{ end }}
-                    
-                    {{ if .Site.Params.testimonials.enable }}
+
+<!--                    {{ if .Site.Params.testimonials.enable }}
                     <li><a href="#" data-nav-section="testimonials"><span>{{ with .Site.Params.navigation.testimonials }}{{ . | markdownify }}{{ end }}</span></a></li>
                     {{ end }}
-
+-->
                     {{ if .Site.Params.services.enable }}
                     <li><a href="#" data-nav-section="services"><span>{{ with .Site.Params.navigation.services }}{{ . | markdownify }}{{ end }}</span></a></li>
                     {{ end }}
