Turned off "announcements" section Added "Former Members" section Updated Members (added Elisa, removed former) Other small quality of life improvements

--- a/themes/hugo-elate-theme/layouts/partials/about.html
+++ b/themes/hugo-elate-theme/layouts/partials/about.html
@@ -27,5 +27,12 @@
 			</div>
 		{{ end }}
 		</div>
+					<div class="row">
+				<div class="col-md-12 text-center to-animate">
+				  <br>
+				  <br>
+					<p>{{ .Site.Params.about.footertext | markdownify }}</p>
+				</div>
+			</div>
 	</div>
 </section>
