--- a/themes/hugo-elate-theme/layouts/partials/work.html
+++ b/themes/hugo-elate-theme/layouts/partials/work.html
@@ -15,6 +15,7 @@
 				<div class="col-md-4 col-sm-6 col-xxs-12">
 					<a href="{{ .url }}" class="fh5co-project-item to-animate">
 						<img src="images/{{ .img }}" alt="{{ .alt }}" class="img-responsive">
+									<img src="images/{{ .category }}" class="img-responsive">
 						<div class="fh5co-text">
 						<h2>{{ .title }}</h2>
 						<span>{{ .subtitle }}</span>
