Updated from google maps to leaflet due to api key changes. Added Martin, Nazanin

--- a/themes/hugo-elate-theme/layouts/partials/head.html
+++ b/themes/hugo-elate-theme/layouts/partials/head.html
@@ -61,6 +61,9 @@
 
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
     
+    <!-- Adding leaflet to replace google maps -->
+    <link rel="stylesheet" href="css/leaflet.css" />
+
     <!-- Animate.css -->
     <link rel="stylesheet" href="css/animate.css">
     <!-- Icomoon Icon Fonts-->
