--- a/themes/hugo-elate-theme/layouts/partials/js.html
+++ b/themes/hugo-elate-theme/layouts/partials/js.html
@@ -13,10 +13,8 @@
 	<!-- Magnific Popup -->
 	<script src="js/jquery.magnific-popup.min.js"></script>
 	<script src="js/magnific-popup-options.js"></script>
-	<!-- Google Map -->
-	{{ if .Site.Params.contact.map }}
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCo2ZEZnegFUq93DZ-y_w4uMaIhAhpL--4&sensor=false"></script>
-	<script src="js/google_map.js"></script>
-	{{ end }}
+	<!-- Map -->
+	<script src="js/leaflet.js"></script>
+	<script src="js/leaflet-map.js"></script>
 	<!-- Main JavaScript -->
 	<script src="js/main.js"></script>
