--- a/themes/hugo-elate-theme/layouts/partials/hero.html
+++ b/themes/hugo-elate-theme/layouts/partials/hero.html
@@ -8,7 +8,7 @@
 							<h1 class="to-animate">{{ with .Site.Params.hero.title }}{{ . | markdownify }}{{ end }}</h1>
 							<h2 class="to-animate">{{ with .Site.Params.hero.subtitle }}{{ . | markdownify }}{{ end }}</h2>
 							<br>
-							<h2 class="to-animate"><img src="logos.png"></h2>
+							<h2 class="to-animate"><img src="new_logos.png"></h2>
 						</div>
 					</div>
 				</div>
